# magnum-bootstrap

./: CMakeLists.txt
src/: CMakeLists.txt  MyApplication.cpp
src/Dnmix/: CMakeLists.txt  Object.cpp  Object.h
